Add header and paragraph content, style h1 and h2

--- a/index.html
+++ b/index.html
@@ -9,6 +9,28 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
   </head>
   <body>
-    <h1 class="greeting">Hey there! Remove this and make your own content!</h1>
+    <div>
+      <h1 class="cv-section">Career Profile</h1>
+      <p>
+        Creative and passionate learner with 350+ training hours and experience in
+        Web development via the Generation USA program. Excited by the prospect of
+        excelling as a web developer as well as showcasing the versatility of my
+        skills acquired from various fields and experiences.
+      </p>
+    </div>
+    <div>
+      <h1 class="cv-section">Experiences</h1>
+      <h2 class="role">Generation Junior Web Developer Program</h2>
+      <p>
+        <ul>
+          <li>
+            Participating in an 11-week, 350+ hour Junior Web Developer program that emphasizes hands-on practical application
+          </li>
+          <li>
+            Learning fundamentals of JavaScript, programming fundamentals, developer tools, git and problem solving
+          </li>
+        </ul>
+      </p>
+  </div>
   </body>
 </html>
